[tool.poetry]
name = "parse"
version = "0.1.0"
description = ""
authors = ["Ethan Steininger <esteininger21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uvicorn = "^0.28.0"
httpx = "^0.27.0"
tika = "^2.6.0"
playwright = "^1.42.0"
beautifulsoup4 = "^4.12.3"
aioboto3 = "^12.3.0"
python-multipart = "^0.0.9"
unstructured = {extras = ["pdf"], version = "^0.12.6"}
fastapi = "^0.110.0"
magika = "<0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
