[tool.poetry]
name = "connectors"
version = "0.1.0"
description = ""
authors = ["Ethan Steininger <esteininger21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
haikunator = "^2.1.0"
magika = "0.5.1"
cryptography = "^42.0.5"
kombu = "^5.3.5"
motor = "^3.3.2"
redis = "^5.0.3"
celery = "^5.3.6"
email-validator = "^2.1.1"
requests = "^2.31.0"
httpx = "^0.27.0"
pymongo = "4.6.0"
boto3 = "1.33.1"
aioboto3 = "12.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
