[tool.poetry]
name = "inference"
version = "0.1.0"
description = "Exposes embedding and generation functionality"
authors = ["goudete <goudetenrique@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
pydantic = "^2.6.4"
fastapi = "^0.110.0"
aioboto3 = "^12.3.0"
uvicorn = "^0.28.0"
python-dotenv = "^1.0.1"
websockets = "^12.0"
asyncio = "^3.4.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.18.1"
requests = "^2.31.0"
websocket-client = "^1.7.0"
tika = "^2.6.0"
httpx = "^0.27.0"
openai = "^1.13.3"
instructor = "^0.6.4"
datamodel-code-generator = "^0.25.4"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
