[tool.poetry]
name = "inference"
version = "0.1.0"
description = ""
authors = ["goudete <goudetenrique@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
openai = "^1.14.0"
instructor = "^0.6.4"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
datamodel-code-generator = "^0.25.4"
transformers = "^4.38.2"
torch = "^2.2.1"
pillow = "^10.2.0"
librosa = "^0.10.1"
torchvision = "^0.17.1"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
