[tool.poetry]
name = "inference"
version = "0.1.0"
description = ""
authors = ["goudete <goudetenrique@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
openai = "^1.14.0"
instructor = "^0.6.4"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
datamodel-code-generator = "^0.25.4"
transformers = "^4.38.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
