[tool.poetry]
name = "connectors"
version = "0.1.0"
description = ""
authors = ["Ethan Steininger <esteininger21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pypgoutput = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
