[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ethan Steininger <esteininger21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
haikunator = "^2.1.0"
magika = "<0.5.1"
cryptography = "42.0.2"
kombu = "^5.3.5"
motor = "^3.3.2"
redis = "^5.0.3"
celery = "^5.3.6"
email-validator = "^2.1.1"
requests = "^2.31.0"
httpx = "^0.27.0"
pymongo = "4.6.0"
boto3 = "^1.33.2"
aioboto3 = "^12.3.0"
openai = "^1.14.1"
psycopg2 = "^2.9.9"
bandit = "^1.7.8"
tika = "^2.6.0"
playwright = "^1.42.0"
beautifulsoup4 = "^4.12.3"
python-multipart = "^0.0.9"
unstructured = {extras = ["pdf"], version = "^0.12.6"}
instructor = "^0.6.4"
datamodel-code-generator = "^0.25.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
